@@ -1,3 +1,7 @@
+2010-01-04 Ozan Çağlayan <ozan@pardus.org.tr>
+		* pisi/actionsapi/shelltools.py (unlink): Support glob patterns in
+		unlink().
+
 2009-12-21 Gökçen Eraslan <gokcen@pardus.org.tr>
 		* pisi/actionsapi/cmaketools.py: Change CMake build type to
 		RelWithDebInfo to get faster KDE packages.
